cargo_check_shortcuts.log
    Checking forge-app v0.1.0 (/app/crates/forge-app)
error[E0599]: no function or associated item named `region` found for struct `forge_core::Selection` in the current scope
    --> crates/forge-app/src/application.rs:2681:80
     |
2681 | ...                   ed.buffer.set_selection(forge_core::Selection::region(
     |                                                                      ^^^^^^ function or associated item not found in `forge_core::Selection`
     |
note: if you're trying to build a new `forge_core::Selection` consider using one of the following associated functions:
      forge_core::Selection::new
      forge_core::Selection::point
      forge_core::Selection::single
    --> /app/crates/forge-core/src/selection.rs:63:5
     |
  63 |     pub fn new(ranges: SmallVec<[Range; 1]>, primary_index: usize) -> Self {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
  73 |     pub fn point(pos: Position) -> Self {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
  81 |     pub fn single(range: Range) -> Self {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: variable does not need to be mutable
   --> crates/forge-app/src/application.rs:357:13
    |
357 |         let mut file_explorer = crate::file_explorer::FileExplorer::new();
    |             ----^^^^^^^^^^^^^
    |             |
    |             help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0599`.
warning: `forge-app` (bin "forge") generated 1 warning
error: could not compile `forge-app` (bin "forge") due to 1 previous error; 1 warning emitted
